cmake_minimum_required(VERSION 2.6)
project(GEMS)
include_directories(.)
if(MSVC)
	SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} /EHsc /MT /GL")
	STRING (REPLACE "/INCREMENTAL:YES" "" CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
	STRING (REPLACE "/INCREMENTAL" "" CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE}")
	SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG /INCREMENTAL:NO")
endif(MSVC)
add_executable(gems_instruments gems_instruments.cpp common.cpp instruments.cpp)
add_executable(gems_to_midi gems_to_midi.cpp)
add_executable(gems_split gems_split.cpp common.cpp instruments.cpp)
add_executable(gems_combine gems_combine.cpp common.cpp instruments.cpp)
add_executable(instrument_converter instrument_converter.cpp common.cpp instruments.cpp)
add_executable(vgmjuice vgmjuice.cpp common.cpp instruments.cpp vgm_parser.cpp midi.cpp)
